tests/negative/neg_pr118c1_print_bare_identifier.safe
package neg_pr118c1_print_bare_identifier

   value : integer = print
